--- a/config/StatusAtExecution.conf
+++ b/config/StatusAtExecution.conf
@@ -1,19 +1,29 @@
 #!/usr/bin/env bash
 
-## PROJECT STATUS VARIABLES
+# These status variables can be changed anywhere in the main script, except for the following variables :
+#   - PROJECT_STATUS_DEBUG  -> This variable is used as (...).
 
 # Project's debug variable --> This variable only accepts "true" or "false" as values.
+# Default value : "false"
 # shellcheck disable=SC2034
 PROJECT_STATUS_DEBUG="false"
 
 # Project's main log file informations --> This variable only accepts "true" or "false" as values.
+# Default value : "true"
 # shellcheck disable=SC2034
 PROJECT_STATUS_LOG="true"
 
-# Project's headers display time --> This variable accepts any integer or floating number.
+# Project's main log file redirection status --> This variables accepts "log", "tee" or nothing as value.
+# Default value : "" (no value)
 # shellcheck disable=SC2034
-PROJECT_STATUS_TIME_HEAD="1"
+PROJECT_STATUS_LOG_REDIRECT=""
+
+# Project's headers display time --> This variable accepts any integer or floating number.
+# Default value : "1"
+# shellcheck disable=SC2034
+PROJECT_STATUS_TIME_LINE="1"
 
 # Project's messages display time --> This variable accepts any integer of floating number.
+# Default value : ".5"
 # shellcheck disable=SC2034
 PROJECT_STATUS_TIME_TXT=".5"
