The function "WriteInitLog" was completely redone

--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 
 # These status variables can be changed anywhere in the main script, except for the following variables :
-#   - PROJECT_STATUS_DEBUG  -> This variable is used as (...).
+#   - PROJECT_STATUS_DEBUG      -> This variable is used as (...).
 
 # Project's debug variable --> This variable only accepts "true" or "false" as values.
 # Default value : "false"
@@ -13,10 +13,15 @@ PROJECT_STATUS_DEBUG="false"
 # shellcheck disable=SC2034
 PROJECT_STATUS_LOG="true"
 
-# Project's main log file redirection status --> This variables accepts "log", "tee" or nothing as value.
+# Project's main log file redirections status --> This variables accepts "log", "tee" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
 PROJECT_STATUS_LOG_REDIRECT=""
+
+# Project's error handling --> This variable accepts "fatal" or nothing as value.
+# Default value : "" (no value)
+# shellcheck disable=SC2034
+PROJECT_STATUS_ERROR=""
 
 # Project's headers display time --> This variable accepts any integer or floating number.
 # Default value : "1"
