Added a Pyhton file for parsing CSV files. It's currently in an alpha version

--- a/config/InitStatus.conf
+++ b/config/InitStatus.conf
@@ -10,4 +10,4 @@ INITIALIZER_STATUS_LOG_CREATE="true"
 # Initialization's log file redirections status --> This variables accepts "log" or "tee" as value.
 # Default value : "tee"
 # shellcheck disable=SC2034
-INITIALIZER_STATUS_LOG_REDIRECT="tee"
+INITIALIZER_STATUS_LOG_REDIRECT="log"
