Improved initialization process script.

--- a/config/InitStatus.conf
+++ b/config/InitStatus.conf
@@ -11,3 +11,8 @@ INITIALIZER_STATUS_LOG_CREATE="true"
 # Default value : "tee"
 # shellcheck disable=SC2034
 INITIALIZER_STATUS_LOG_REDIRECT="tee"
+
+# Initialization's processus display time if the "$INITIALIZER_STATUS_LOG_REDIRECT" variable's value is equal to "tee".
+# Default value : ".3"
+# shellcheck disable=SC2034
+INITIALIZER_STATUS_DISPLAY_TIME=".3"
