--- a/config/InitStatus.conf
+++ b/config/InitStatus.conf
@@ -27,11 +27,13 @@ INITIALIZER_STATUS_DISPLAY_TIME=".1"
 # Checking if their values match to the expected values.
 
 if [ "$INITIALIZER_STATUS_LOG_CREATE" != "true" ] && [ "$INITIALIZER_STATUS_LOG_CREATE" != "false" ]; then
-    echo "In ${BASH_SOURCE[0]}, line $(( LINENO-1 )) --> Error : The INITIALIZER_STATUS_LOG_CREATE status variable's value is incorrect"
-    exit 1
+    echo "In ${BASH_SOURCE[0]}, line $(( LINENO-1 )) --> Error : the INITIALIZER_STATUS_LOG_CREATE status variable's value is incorrect"; exit 1
 fi
 
 if [ -n "$INITIALIZER_STATUS_LOG_REDIRECT" ] && [ "$INITIALIZER_STATUS_LOG_REDIRECT" != "log" ] && [ "$INITIALIZER_STATUS_LOG_REDIRECT" != "tee" ]; then
-    echo "In ${BASH_SOURCE[0]}, line $(( LINENO-1 )) --> Error : The INITIALIZER_FILE_LOG_REDIRECT status variable's value is incorrect"
-    exit 1
+    echo "In ${BASH_SOURCE[0]}, line $(( LINENO-1 )) --> Error : the INITIALIZER_FILE_LOG_REDIRECT status variable's value is incorrect"; exit 1
+fi
+
+if [[ ! "$INITIALIZER_STATUS_DISPLAY_TIME" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
+    echo "In ${BASH_SOURCE[0]}, line $(( LINENO-1 )) --> Error : the INITIALIZER_STATUS_DISPLAY_TIME status variable's value is incorrect"; exit 1
 fi
