--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -45,31 +45,30 @@ STAT_TIME_TXT=".5"
 function CheckProjectStatusVars
 {
     # Processing first the "STAT_LOG_REDIRECT" variable, to make sure the following error messages will be correctly displayed if another error happened.
-    if [ -n "$STAT_LOG_REDIRECT" ] && [ "$STAT_LOG_REDIRECT" != "log" ] \
-        && [ "$STAT_LOG_REDIRECT" != "tee" ]; then
+    if [ -n "$STAT_LOG_REDIRECT" ] && [ "$STAT_LOG_REDIRECT" != "log" ] && [ "$STAT_LOG_REDIRECT" -ne 1 ] \
+        && [ "$STAT_LOG_REDIRECT" != "tee" ] && [ "$STAT_LOG_REDIRECT" -ne 2 ]; then
         # On définit quand même la variable PROJECT_STATUS_LOG_REDIRECT à "tee"
         # pour afficher sans problèmes le contenu de la chaîne de caractères en rouge.
-        STAT_LOG_REDIRECT=""
-        EchoError "Error : STAT_DEBUG variable's value is incorrect."; exit 1
+        echo "$TXT_RED_TAB Error : STAT_DEBUG variable's value is incorrect.$COL_RESET"; echo; exit 1
 
     elif [ "$STAT_DEBUG" != "true" ] && [ "$STAT_DEBUG" != "false" ]; then
-        EchoError "Error : STAT_LOG variable's value is incorrect."; exit 1
+        echo "$TXT_RED_TAB Error : STAT_LOG variable's value is incorrect.$COL_RESET"; echo; exit 1
         
     elif [ "$STAT_LOG" != "true" ] && [ "$STAT_LOG" != "false" ]; then
-        EchoError "Error : STAT_LOG_REDIRECT variable's value is incorrect."; exit 1
+        echo "$TXT_RED_TAB Error : STAT_LOG_REDIRECT variable's value is incorrect.$COL_RESET"; echo; exit 1
     
     elif [ -n "$STAT_ERROR" ] && [ "$STAT_ERROR" != "fatal" ]; then
-        echo "Error : STAT_ERROR variable's value is incorrect."; exit 1
+        echo "$TXT_RED_TAB Error : STAT_ERROR variable's value is incorrect.$COL_RESET"; echo; exit 1
     
     elif [[ ! "$STAT_TIME_HEADER" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        EchoError "Error : STAT_TIME_HEADER variable's value is not a number."; exit 1
+        echo "$TXT_RED_TAB Error : STAT_TIME_HEADER variable's value is not a number.$COL_RESET"; echo; exit 1
     
     # If the status variable's value is not a float or an integer.
     elif [[ ! "$STAT_TIME_LINE" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        EchoError "Error : STAT_TIME_LINE variable's value is not a number."; exit 1
+        echo "$TXT_RED_TAB Error : STAT_TIME_LINE variable's value is not a number.$COL_RESET"; echo; exit 1
     
     elif [[ ! "$STAT_TIME_TXT" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        EchoError "Error : STAT_TIME_TXT variable's value is not a number."; exit 1
+        echo "$TXT_RED_TAB Error : STAT_TIME_TXT variable's value is not a number.$COL_RESET"; echo; exit 1
     
     fi
 }
