--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -55,7 +55,7 @@ STAT_USER_OS=""
 function CheckSTAT_DEBUG
 {
     if [ "$STAT_DEBUG" != "true" ] && [ "$STAT_DEBUG" != "false" ]; then
-        echo "$TXT_RED_TAB Error : the STAT_LOG variable's value is incorrect.$COL_RESET"; echo; exit 1
+        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_LOG variable's value is incorrect." >&2; echo >&2; ExitError
     fi
 }
 
@@ -63,7 +63,7 @@ function CheckSTAT_DEBUG
 function CheckSTAT_ERROR
 {
     if [ -n "$STAT_ERROR" ] && [ "$STAT_ERROR" != "fatal" ]; then
-        echo "$TXT_RED_TAB Error : the STAT_ERROR variable's value is incorrect.$COL_RESET"; echo; exit 1
+        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_ERROR variable's value is incorrect.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
     fi
 }
 
@@ -71,18 +71,17 @@ function CheckSTAT_ERROR
 function CheckSTAT_LOG
 {
     if [ "$STAT_LOG" != "true" ] && [ "$STAT_LOG" != "false" ]; then
-        echo "$TXT_RED_TAB Error : the STAT_LOG_REDIRECT variable's value is incorrect.$COL_RESET"; echo; exit 1
+        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_LOG_REDIRECT variable's value is incorrect.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
     fi
 }
 
 # Checking the "$STAT_LOG_REDIRECT" variable's value.
 function CheckSTAT_LOG_REDIRECT
 {
-    if [ -n "$STAT_LOG_REDIRECT" ] && [ "$STAT_LOG_REDIRECT" != "log" ] && [ "$STAT_LOG_REDIRECT" -ne 1 ] \
-        && [ "$STAT_LOG_REDIRECT" != "tee" ] && [ "$STAT_LOG_REDIRECT" -ne 2 ]; then
+    if [ -n "$STAT_LOG_REDIRECT" ] && [ "$STAT_LOG_REDIRECT" != 'log' ] && [ "$STAT_LOG_REDIRECT" != 'tee' ]; then
         # On définit quand même la variable PROJECT_STATUS_LOG_REDIRECT à "tee"
         # pour afficher sans problèmes le contenu de la chaîne de caractères en rouge.
-        echo "$TXT_RED_TAB Error : the STAT_DEBUG variable's value is incorrect.$COL_RESET"; echo; exit 1
+        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_DEBUG variable's value is incorrect.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
     fi
 }
 
@@ -91,7 +90,7 @@ function CheckSTAT_TIME_HEADER
 {
     # If the status variable's value is not a float or an integer.
     if [[ ! "$STAT_TIME_HEADER" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        echo "$TXT_RED_TAB Error : the STAT_TIME_HEADER variable's value is not a number.$COL_RESET"; echo; exit 1
+        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_TIME_HEADER variable's value is not a number.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
     fi
 }
 
@@ -100,7 +99,7 @@ function CheckSTAT_TIME_LINE
 {
     # If the status variable's value is not a float or an integer.
     if [[ ! "$STAT_TIME_LINE" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        echo "$TXT_RED_TAB Error : the STAT_TIME_LINE variable's value is not a number.$COL_RESET"; echo; exit 1
+        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_TIME_LINE variable's value is not a number.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
     fi
 }
 
@@ -109,7 +108,7 @@ function CheckSTAT_TIME_TXT
 {
     # If the status variable's value is not a float or an integer.
     if [[ ! "$STAT_TIME_TXT" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        echo "$TXT_RED_TAB Error : the STAT_TIME_TXT variable's value is not a number.$COL_RESET"; echo; exit 1
+        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_TIME_TXT variable's value is not a number.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
     
     fi
 }
@@ -135,4 +134,7 @@ function CheckProjectStatusVars
     CheckSTAT_TIME_TXT
 }
 
+# Checking the project's status variables before switching back to the project's script.
+# This function will be executed during the sourcing of this file in the initializer script.
+# There's no need to call it in the forementionned script.
 CheckProjectStatusVars
