--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -55,7 +55,7 @@ STAT_USER_OS=""
 function CheckSTAT_DEBUG
 {
     if [ "$STAT_DEBUG" != "true" ] && [ "$STAT_DEBUG" != "false" ]; then
-        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_LOG variable's value is incorrect." >&2; echo >&2; ExitError
+        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_LOG$(tput setaf "$COL_RED") variable's value is incorrect.$(tput sgr0)" >&2; echo >&2; ExitError
     fi
 }
 
@@ -63,7 +63,7 @@ function CheckSTAT_DEBUG
 function CheckSTAT_ERROR
 {
     if [ -n "$STAT_ERROR" ] && [ "$STAT_ERROR" != "fatal" ]; then
-        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_ERROR variable's value is incorrect.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
+        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_ERROR$(tput setaf "$COL_RED") variable's value is incorrect.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
     fi
 }
 
@@ -71,7 +71,7 @@ function CheckSTAT_ERROR
 function CheckSTAT_LOG
 {
     if [ "$STAT_LOG" != "true" ] && [ "$STAT_LOG" != "false" ]; then
-        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_LOG_REDIRECT variable's value is incorrect.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
+        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_LOG_REDIRECT$(tput setaf "$COL_RED") variable's value is incorrect.$(tput sgr0)" >&2; echo >&2; ExitError
     fi
 }
 
@@ -79,9 +79,7 @@ function CheckSTAT_LOG
 function CheckSTAT_LOG_REDIRECT
 {
     if [ -n "$STAT_LOG_REDIRECT" ] && [ "$STAT_LOG_REDIRECT" != 'log' ] && [ "$STAT_LOG_REDIRECT" != 'tee' ]; then
-        # On définit quand même la variable PROJECT_STATUS_LOG_REDIRECT à "tee"
-        # pour afficher sans problèmes le contenu de la chaîne de caractères en rouge.
-        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_DEBUG variable's value is incorrect.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
+        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_DEBUG$(tput setaf "$COL_RED") variable's value is incorrect.$(tput sgr0)" >&2; echo >&2; ExitError
     fi
 }
 
@@ -90,7 +88,7 @@ function CheckSTAT_TIME_HEADER
 {
     # If the status variable's value is not a float or an integer.
     if [[ ! "$STAT_TIME_HEADER" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_TIME_HEADER variable's value is not a number.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
+        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_TIME_HEADER$(tput setaf "$COL_RED") variable's value is not a number.$(tput sgr0)" >&2; echo >&2; ExitError
     fi
 }
 
@@ -99,7 +97,7 @@ function CheckSTAT_TIME_LINE
 {
     # If the status variable's value is not a float or an integer.
     if [[ ! "$STAT_TIME_LINE" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_TIME_LINE variable's value is not a number.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
+        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_TIME_LINE$(tput setaf "$COL_RED") variable's value is not a number.$(tput sgr0)" >&2; echo >&2; ExitError
     fi
 }
 
@@ -108,7 +106,7 @@ function CheckSTAT_TIME_TXT
 {
     # If the status variable's value is not a float or an integer.
     if [[ ! "$STAT_TIME_TXT" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        echo "$(ColorChar "setaf" "$COL_RED") Error : the STAT_TIME_TXT variable's value is not a number.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
+        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_TIME_TXT$(tput setaf "$COL_RED") variable's value is not a number.$(tput sgr0)" >&2; echo >&2; ExitError
     
     fi
 }
