Huge save, HandleErrors() and some other functions has been rewritten

--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -25,16 +25,6 @@ STAT_LOG="true"
 # shellcheck disable=SC2034
 STAT_LOG_REDIRECT=""
 
-# Project's whole headers display time --> This variable accepts any integer of floating number.
-# Default value : "1.5"
-# shellcheck disable=SC2034
-STAT_TIME_HEADER="1.5"
-
-# Project's headers line display time --> This variable accepts any integer or floating number.
-# Default value : "1"
-# shellcheck disable=SC2034
-STAT_TIME_LINE="1"
-
 # Project's messages display time --> This variable accepts any integer of floating number.
 # Default value : ".5"
 # shellcheck disable=SC2034
@@ -51,11 +41,38 @@ STAT_USER_OS=""
 
 ## VARIABLES VALUES CHECKING
 
+# Easy writing text function.
+function ConfEcho
+{
+    #***** Parameters *****
+    var=$1
+    val=$2
+    
+    #***** Variables *****
+    arr=("$@")
+
+    #***** Code *****
+    echo >&2; echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")$var$(tput setaf "$COL_RED") variable's value is incorrect$(tput sgr0)" >&2
+    echo "$(tput setaf "$COL_RED")The awaited values are :$(tput sgr0)" >&2
+    
+    # Displaying the list of every allowed arguments.
+    for i in "${val[@]}"; do
+        # If an empty argument is allowed.
+        if [ -z "$val" ]; then
+            echo "$(tput setaf "$COL_RED")  --> $(tput setaf "$COL_ORANGE")An empty argument$(tput sgr0)" >&2
+        else
+            echo "$(tput setaf "$COL_RED")  --> $(tput setaf "$COL_CYAN")$val$(tput sgr0)" >&2
+        fi
+    done
+    
+    echo >&2; ExitError
+}
+
 # Checking the "$STAT_DEBUG" variable's value.
 function CheckSTAT_DEBUG
 {
     if [ "$STAT_DEBUG" != "true" ] && [ "$STAT_DEBUG" != "false" ]; then
-        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_LOG$(tput setaf "$COL_RED") variable's value is incorrect.$(tput sgr0)" >&2; echo >&2; ExitError
+        ConfEcho "STAT_DEBUG" "true" "false"
     fi
 }
 
@@ -63,7 +80,7 @@ function CheckSTAT_DEBUG
 function CheckSTAT_ERROR
 {
     if [ -n "$STAT_ERROR" ] && [ "$STAT_ERROR" != "fatal" ]; then
-        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_ERROR$(tput setaf "$COL_RED") variable's value is incorrect.$(ColorChar "sgr0")" >&2; echo >&2; ExitError
+        ConfEcho "STAT_ERROR" "" "false"
     fi
 }
 
@@ -71,7 +88,7 @@ function CheckSTAT_ERROR
 function CheckSTAT_LOG
 {
     if [ "$STAT_LOG" != "true" ] && [ "$STAT_LOG" != "false" ]; then
-        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_LOG_REDIRECT$(tput setaf "$COL_RED") variable's value is incorrect.$(tput sgr0)" >&2; echo >&2; ExitError
+        ConfEcho "STAT_LOG" "true" "false"
     fi
 }
 
@@ -79,25 +96,7 @@ function CheckSTAT_LOG
 function CheckSTAT_LOG_REDIRECT
 {
     if [ -n "$STAT_LOG_REDIRECT" ] && [ "$STAT_LOG_REDIRECT" != 'log' ] && [ "$STAT_LOG_REDIRECT" != 'tee' ]; then
-        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_DEBUG$(tput setaf "$COL_RED") variable's value is incorrect.$(tput sgr0)" >&2; echo >&2; ExitError
-    fi
-}
-
-# Checking the "$STAT_TIME_HEADER" variable's value.
-function CheckSTAT_TIME_HEADER
-{
-    # If the status variable's value is not a float or an integer.
-    if [[ ! "$STAT_TIME_HEADER" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_TIME_HEADER$(tput setaf "$COL_RED") variable's value is not a number.$(tput sgr0)" >&2; echo >&2; ExitError
-    fi
-}
-
-# Checking the "$STAT_TIME_LINE" variable's value.
-function CheckSTAT_TIME_LINE
-{
-    # If the status variable's value is not a float or an integer.
-    if [[ ! "$STAT_TIME_LINE" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_TIME_LINE$(tput setaf "$COL_RED") variable's value is not a number.$(tput sgr0)" >&2; echo >&2; ExitError
+        ConfEcho "STAT_LOG_REDIRECT" "" "true" "false"
     fi
 }
 
@@ -106,8 +105,7 @@ function CheckSTAT_TIME_TXT
 {
     # If the status variable's value is not a float or an integer.
     if [[ ! "$STAT_TIME_TXT" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")STAT_TIME_TXT$(tput setaf "$COL_RED") variable's value is not a number.$(tput sgr0)" >&2; echo >&2; ExitError
-    
+        ConfEcho "STAT_TIME_TXT"
     fi
 }
 
@@ -127,8 +125,6 @@ function CheckProjectStatusVars
     CheckSTAT_DEBUG
     CheckSTAT_ERROR
     CheckSTAT_LOG
-    CheckSTAT_TIME_HEADER
-    CheckSTAT_TIME_LINE
     CheckSTAT_TIME_TXT
 }
 
