Improved the status variables values checking.

--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -41,71 +41,100 @@ STAT_USER_OS=""
 
 ## VARIABLES VALUES CHECKING
 
+# Checking if the variables color file is sourced.
+if [ -z "$__COL_IS_INITIALIZED" ]; then
+    COL_CYAN="6"
+    COL_ORANGE="166"
+    COL_RED="196"
+fi
+
 # Easy writing text function.
 function ConfEcho
 {
     #***** Parameters *****
-    var=$1
-    val=$2
-    
+    local var=$1; shift
+    local arr=("$@")
+
     #***** Variables *****
-    arr=("$@")
+    i=0
 
     #***** Code *****
     echo >&2; echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")$var$(tput setaf "$COL_RED") variable's value is incorrect$(tput sgr0)" >&2
-    echo "$(tput setaf "$COL_RED")The awaited values are :$(tput sgr0)" >&2
+    echo >&2; echo "$(tput setaf ""$COL_RED)The awaited values are :$(tput sgr0)" >&2
     
     # Displaying the list of every allowed arguments.
-    for i in "${val[@]}"; do
+    for val in "${arr[@]}"; do
+        i=$(( i+1 ))
+
         # If an empty argument is allowed.
         if [ -z "$val" ]; then
-            echo "$(tput setaf "$COL_RED")  --> $(tput setaf "$COL_ORANGE")An empty argument$(tput sgr0)" >&2
+            echo "$(tput setaf "$COL_RED")$i/${#arr[@]}  --> $(tput setaf "$COL_ORANGE")An empty argument$(tput sgr0)" >&2
         else
-            echo "$(tput setaf "$COL_RED")  --> $(tput setaf "$COL_CYAN")$val$(tput sgr0)" >&2
+            echo "$(tput setaf "$COL_RED")$i/${#arr[@]}  --> $(tput setaf "$COL_CYAN")$val$(tput sgr0)" >&2
         fi
     done
     
-    echo >&2; ExitError
+    echo >&2; kill "$$"
 }
 
 # Checking the "$STAT_DEBUG" variable's value.
 function CheckSTAT_DEBUG
 {
+    #***** Variables *****
+    local array=("true" "false")
+
+    #***** Code *****
     if [ "$STAT_DEBUG" != "true" ] && [ "$STAT_DEBUG" != "false" ]; then
-        ConfEcho "STAT_DEBUG" "true" "false"
+        ConfEcho "STAT_DEBUG" "${array[@]}"
     fi
 }
 
 # Checking the "$STAT_ERROR" variable's value.
 function CheckSTAT_ERROR
 {
+    #***** Variables *****
+    local array=("" "fatal")
+
+    #***** Code *****
     if [ -n "$STAT_ERROR" ] && [ "$STAT_ERROR" != "fatal" ]; then
-        ConfEcho "STAT_ERROR" "" "false"
+        ConfEcho "STAT_ERROR" "${array[@]}"
     fi
 }
 
 # Checking the "$STAT_LOG" variable's value.
 function CheckSTAT_LOG
 {
+    #***** Variables *****
+    local array=("true" "false")
+
+    #***** Code *****
     if [ "$STAT_LOG" != "true" ] && [ "$STAT_LOG" != "false" ]; then
-        ConfEcho "STAT_LOG" "true" "false"
+        ConfEcho "STAT_LOG" "${array[@]}"
     fi
 }
 
 # Checking the "$STAT_LOG_REDIRECT" variable's value.
 function CheckSTAT_LOG_REDIRECT
 {
+    #***** Variables *****
+    local array=("" "true" "false")
+
+    #***** Code *****
     if [ -n "$STAT_LOG_REDIRECT" ] && [ "$STAT_LOG_REDIRECT" != 'log' ] && [ "$STAT_LOG_REDIRECT" != 'tee' ]; then
-        ConfEcho "STAT_LOG_REDIRECT" "" "true" "false"
+        ConfEcho "STAT_LOG_REDIRECT" "${array[@]}"
     fi
 }
 
 # Checking the "$STAT_TIME_TXT" variable's value.
 function CheckSTAT_TIME_TXT
 {
+    #***** Variables *****
+    local array=("$(tput setaf "$COL_ORANGE")An integer")
+
+    #***** Code *****
     # If the status variable's value is not a float or an integer.
     if [[ ! "$STAT_TIME_TXT" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        ConfEcho "STAT_TIME_TXT"
+        ConfEcho "STAT_TIME_TXT" "${array[@]}" >&2
     fi
 }
 
@@ -121,7 +150,7 @@ function CheckSTAT_USER_OS
 function CheckProjectStatusVars
 {
     # Processing first the "STAT_LOG_REDIRECT" variable, to make sure the following error messages will be correctly displayed if another error happened.
-    CheckSTAT_LOG_REDIRECT
+    STAT_LOG_REDIRECT="lol" CheckSTAT_LOG_REDIRECT
     CheckSTAT_DEBUG
     CheckSTAT_ERROR
     CheckSTAT_LOG
