Readding the local variables

--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -42,11 +42,14 @@ STAT_USER_OS=""
 ## VARIABLES VALUES CHECKING
 
 # Checking if the variables color file is sourced.
-if [ -z "$__COL_IS_INITIALIZED" ]; then
-    COL_CYAN="6"
-    COL_ORANGE="166"
-    COL_RED="196"
-fi
+function CheckColorCodeVariablesInitialized
+{
+    if [ -z "$__COL_IS_INITIALIZED" ]; then
+        COL_CYAN="6"
+        COL_ORANGE="166"
+        COL_RED="196"
+    fi
+}
 
 # Easy writing text function.
 function ConfEcho
@@ -59,8 +62,10 @@ function ConfEcho
     i=0
 
     #***** Code *****
+    CheckColorCodeVariablesInitialized
+    
     echo >&2; echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")$var$(tput setaf "$COL_RED") variable's value is incorrect$(tput sgr0)" >&2
-    echo >&2; echo "$(tput setaf ""$COL_RED)The awaited values are :$(tput sgr0)" >&2
+    echo >&2; echo "$(tput setaf ""$COL_RED)The allowed values are :$(tput sgr0)" >&2
     
     # Displaying the list of every allowed arguments.
     for val in "${arr[@]}"; do
@@ -129,7 +134,7 @@ function CheckSTAT_LOG_REDIRECT
 function CheckSTAT_TIME_TXT
 {
     #***** Variables *****
-    local array=("$(tput setaf "$COL_ORANGE")An integer")
+    local array=("$(tput setaf "$COL_ORANGE")An integer or a floating number")
 
     #***** Code *****
     # If the status variable's value is not a float or an integer.
@@ -150,7 +155,7 @@ function CheckSTAT_USER_OS
 function CheckProjectStatusVars
 {
     # Processing first the "STAT_LOG_REDIRECT" variable, to make sure the following error messages will be correctly displayed if another error happened.
-    STAT_LOG_REDIRECT="lol" CheckSTAT_LOG_REDIRECT
+    CheckSTAT_LOG_REDIRECT
     CheckSTAT_DEBUG
     CheckSTAT_ERROR
     CheckSTAT_LOG
