--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -55,7 +55,9 @@ function CheckColorCodeVariablesInitialized
 function ConfEcho
 {
     #***** Parameters *****
-    local var=$1; shift
+    local p_file=$1
+    local p_lineno=$2
+    local var=$3; shift
     local arr=("$@")
 
     #***** Variables *****
@@ -64,8 +66,8 @@ function ConfEcho
     #***** Code *****
     CheckColorCodeVariablesInitialized
     
-    echo >&2; echo "$(tput setaf "$COL_RED")Error : the $(tput setaf "$COL_CYAN")$var$(tput setaf "$COL_RED") variable's value is incorrect$(tput sgr0)" >&2
-    echo >&2; echo "$(tput setaf ""$COL_RED)The allowed values are :$(tput sgr0)" >&2
+    echo >&2; echo "$(tput setaf "$COL_RED")In $(tput setaf "$COL_CYAN")$p_file$(tput setaf "$COL_RED"), line $(tput setaf "$COL_CYAN")$p_lineno$(tput setaf "$COL_RED") --> Error : the $(tput setaf "$COL_CYAN")$var$(tput setaf "$COL_RED") variable's value is incorrect$(tput sgr0)" >&2
+    echo >&2; echo "$(tput setaf "$COL_RED")The allowed values are :$(tput sgr0)" >&2
     
     # Displaying the list of every allowed arguments.
     for val in "${arr[@]}"; do
@@ -79,67 +81,87 @@ function ConfEcho
         fi
     done
     
-    echo >&2; kill "$$"
+    echo >&2; exit 1
 }
 
 # Checking the "$STAT_DEBUG" variable's value.
 function CheckSTAT_DEBUG
 {
+    #***** Parameters *****
+    local p_file=$1
+    local p_lineno=$2
+
     #***** Variables *****
     local array=("true" "false")
 
     #***** Code *****
     if [ "$STAT_DEBUG" != "true" ] && [ "$STAT_DEBUG" != "false" ]; then
-        ConfEcho "STAT_DEBUG" "${array[@]}"
+        ConfEcho "$p_file" "$p_lineno" "STAT_DEBUG" "${array[@]}"
     fi
 }
 
 # Checking the "$STAT_ERROR" variable's value.
 function CheckSTAT_ERROR
 {
+    #***** Parameters *****
+    local p_file=$1
+    local p_lineno=$2
+
     #***** Variables *****
     local array=("" "fatal")
 
     #***** Code *****
     if [ -n "$STAT_ERROR" ] && [ "$STAT_ERROR" != "fatal" ]; then
-        ConfEcho "STAT_ERROR" "${array[@]}"
+        ConfEcho "$p_file" "$p_lineno" "STAT_ERROR" "${array[@]}"
     fi
 }
 
 # Checking the "$STAT_LOG" variable's value.
 function CheckSTAT_LOG
 {
+    #***** Parameters *****
+    local p_file=$1
+    local p_lineno=$2
+
     #***** Variables *****
     local array=("true" "false")
 
     #***** Code *****
     if [ "$STAT_LOG" != "true" ] && [ "$STAT_LOG" != "false" ]; then
-        ConfEcho "STAT_LOG" "${array[@]}"
+        ConfEcho "$p_file" "$p_lineno" "STAT_LOG" "${array[@]}"
     fi
 }
 
 # Checking the "$STAT_LOG_REDIRECT" variable's value.
 function CheckSTAT_LOG_REDIRECT
 {
+    #***** Parameters *****
+    local p_file=$1
+    local p_lineno=$2
+
     #***** Variables *****
     local array=("" "true" "false")
 
     #***** Code *****
     if [ -n "$STAT_LOG_REDIRECT" ] && [ "$STAT_LOG_REDIRECT" != 'log' ] && [ "$STAT_LOG_REDIRECT" != 'tee' ]; then
-        ConfEcho "STAT_LOG_REDIRECT" "${array[@]}"
+        ConfEcho "$p_file" "$p_lineno" "STAT_LOG_REDIRECT" "${array[@]}"
     fi
 }
 
 # Checking the "$STAT_TIME_TXT" variable's value.
 function CheckSTAT_TIME_TXT
 {
+    #***** Parameters *****
+    local p_file=$1
+    local p_lineno=$2
+
     #***** Variables *****
     local array=("$(tput setaf "$COL_ORANGE")An integer or a floating number")
 
     #***** Code *****
     # If the status variable's value is not a float or an integer.
     if [[ ! "$STAT_TIME_TXT" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        ConfEcho "STAT_TIME_TXT" "${array[@]}" >&2
+        ConfEcho "$p_file" "$p_lineno" "STAT_TIME_TXT" "${array[@]}" >&2
     fi
 }
 
@@ -154,15 +176,20 @@ function CheckSTAT_USER_OS
 # Checking all the project's status variables values if multiple values had been modified.
 function CheckProjectStatusVars
 {
+    #***** Parameters *****
+    local p_file=$1
+    local p_lineno=$2
+
+    #***** Code *****
     # Processing first the "STAT_LOG_REDIRECT" variable, to make sure the following error messages will be correctly displayed if another error happened.
-    CheckSTAT_LOG_REDIRECT
-    CheckSTAT_DEBUG
-    CheckSTAT_ERROR
-    CheckSTAT_LOG
-    CheckSTAT_TIME_TXT
+    CheckSTAT_LOG_REDIRECT  "$p_file" "$p_lineno"
+    CheckSTAT_DEBUG         "$p_file" "$p_lineno"
+    CheckSTAT_ERROR         "$p_file" "$p_lineno"
+    CheckSTAT_LOG           "$p_file" "$p_lineno"
+    CheckSTAT_TIME_TXT      "$p_file" "$p_lineno"
 }
 
 # Checking the project's status variables before switching back to the project's script.
 # This function will be executed during the sourcing of this file in the initializer script.
 # There's no need to call it in the forementionned script.
-CheckProjectStatusVars
+CheckProjectStatusVars "$(basename "${BASH_SOURCE[0]}")" "$LINENO"
