Successfully corrected the log redirection bug in the CheckProjectLogStatus() function

--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -48,6 +48,7 @@ function CheckColorCodeVariablesInitialized
         COL_CYAN="6"
         COL_ORANGE="166"
         COL_RED="196"
+        COL_YELLOW="226"
     fi
 }
 
@@ -55,9 +56,13 @@ function CheckColorCodeVariablesInitialized
 function ConfEcho
 {
     #***** Parameters *****
-    local p_file=$1
-    local p_lineno=$2
-    local var=$3; shift
+    local p_file=$1;
+    local p_lineno=$2;
+    local badVal=$3;
+    local varVal=$4
+    
+    shift && shift && shift && shift   # Shift the same number of time as the former arguments number to avoid including these arguments values in the allowed values array.
+    
     local arr=("$@")
 
     #***** Variables *****
@@ -66,7 +71,14 @@ function ConfEcho
     #***** Code *****
     CheckColorCodeVariablesInitialized
     
-    echo >&2; echo "$(tput setaf "$COL_RED")In $(tput setaf "$COL_CYAN")$p_file$(tput setaf "$COL_RED"), line $(tput setaf "$COL_CYAN")$p_lineno$(tput setaf "$COL_RED") --> Error : the $(tput setaf "$COL_CYAN")$var$(tput setaf "$COL_RED") variable's value is incorrect$(tput sgr0)" >&2
+    echo >&2; echo "$(tput setaf "$COL_RED")In $(tput setaf "$COL_CYAN")$p_file$(tput setaf "$COL_RED"), line $(tput setaf "$COL_CYAN")$p_lineno$(tput setaf "$COL_RED") --> Error : the $(tput setaf "$COL_CYAN")$varVal$(tput setaf "$COL_RED") variable's value is incorrect$(tput sgr0)" >&2
+    
+    if [ -z "$badVar" ]; then
+        echo >&2; echo "$(tput setaf "$COL_RED")Bad value : $(tput setaf "$COL_YELLOW")An empty string$(tput sgr0)" >&2
+    else
+        echo >&2; echo "$(tput setaf "$COL_RED")Bad value : $(tput setaf "$COL_CYAN")$badVal$(tput sgr0)" >&2
+    fi
+
     echo >&2; echo "$(tput setaf "$COL_RED")The allowed values are :$(tput sgr0)" >&2
     
     # Displaying the list of every allowed arguments.
@@ -96,7 +108,7 @@ function CheckSTAT_DEBUG
 
     #***** Code *****
     if [ "$STAT_DEBUG" != "true" ] && [ "$STAT_DEBUG" != "false" ]; then
-        ConfEcho "$p_file" "$p_lineno" "STAT_DEBUG" "${array[@]}"
+        ConfEcho "$p_file" "$p_lineno" "$STAT_DEBUG" "STAT_DEBUG" "${array[@]}"
     fi
 }
 
@@ -112,7 +124,7 @@ function CheckSTAT_ERROR
 
     #***** Code *****
     if [ -n "$STAT_ERROR" ] && [ "$STAT_ERROR" != "fatal" ]; then
-        ConfEcho "$p_file" "$p_lineno" "STAT_ERROR" "${array[@]}"
+        ConfEcho "$p_file" "$p_lineno" "$STAT_ERROR" "STAT_ERROR" "${array[@]}"
     fi
 }
 
@@ -128,7 +140,7 @@ function CheckSTAT_LOG
 
     #***** Code *****
     if [ "$STAT_LOG" != "true" ] && [ "$STAT_LOG" != "false" ]; then
-        ConfEcho "$p_file" "$p_lineno" "STAT_LOG" "${array[@]}"
+        ConfEcho "$p_file" "$p_lineno" "$STAT_LOG" "STAT_LOG" "${array[@]}"
     fi
 }
 
@@ -144,7 +156,7 @@ function CheckSTAT_LOG_REDIRECT
 
     #***** Code *****
     if [ -n "$STAT_LOG_REDIRECT" ] && [ "$STAT_LOG_REDIRECT" != 'log' ] && [ "$STAT_LOG_REDIRECT" != 'tee' ]; then
-        ConfEcho "$p_file" "$p_lineno" "STAT_LOG_REDIRECT" "${array[@]}"
+        ConfEcho "$p_file" "$p_lineno" "$STAT_LOG_REDIRECT" "STAT_LOG_REDIRECT" "${array[@]}"
     fi
 }
 
@@ -161,7 +173,7 @@ function CheckSTAT_TIME_TXT
     #***** Code *****
     # If the status variable's value is not a float or an integer.
     if [[ ! "$STAT_TIME_TXT" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        ConfEcho "$p_file" "$p_lineno" "STAT_TIME_TXT" "${array[@]}" >&2
+        ConfEcho "$p_file" "$p_lineno" "$STAT_TIME_TXT" "STAT_TIME_TXT" "${array[@]}" >&2
     fi
 }
 
