Renamed many global variables to avoid confusion with environment variables

--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -8,33 +8,33 @@
 # Project's debug variable --> This variable only accepts "true" or "false" as values.
 # Default value : "false"
 # shellcheck disable=SC2034
-STAT_DEBUG="false"
+__STAT_DEBUG="false"
 
 # Project's error handling --> This variable accepts "fatal" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
-STAT_ERROR=""
+__STAT_ERROR=""
 
 # Project's main log file informations --> This variable only accepts "true" or "false" as values.
 # Default value : "true"
 # shellcheck disable=SC2034
-STAT_LOG="true"
+__STAT_LOG="true"
 
 # Project's main log file redirections status --> This variables accepts "log", "tee" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
-STAT_LOG_REDIRECT=""
+__STAT_LOG_REDIRECT=""
 
 # Project's messages display time --> This variable accepts any integer of floating number.
 # Default value : ".5"
 # shellcheck disable=SC2034
-STAT_TIME_TXT=".5"
+__STAT_TIME_TXT=".5"
 
 # User's operating system (getting user's OS is important for OS-dependent processings, like package management)
 # --> This variable will be completed with the "CheckSupportedOSType" function.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
-STAT_USER_OS=""
+__STAT_USER_OS=""
 
 
 # -----------------------------------------------
@@ -42,13 +42,17 @@ STAT_USER_OS=""
 ## VARIABLES VALUES CHECKING
 
 # Checking if the variables color file is sourced.
-function CheckColorCodeVariablesInitialized
+function CheckColorCodesAndTextTabVariablesInitialized
 {
+    # Redefining the color and text variables here if the color variables file is not yet sourced.
     if [ -z "$__COL_IS_INITIALIZED" ]; then
-        COL_CYAN="6"
-        COL_ORANGE="166"
-        COL_RED="196"
-        COL_YELLOW="226"
+        __COL_CYAN="$(tput setaf 6)"
+        __COL_ORANGE="$(tput setaf 166)"
+        __COL_RED="$(tput setaf 196)"
+        __COL_RESET="$(tput sgr0)"
+        __COL_YELLOW="$(tput setaf 226)"
+    elif [ -z "$__TXT_IS_INITIALIZED" ]; then
+        __TXT_TAB=">>>>"
     fi
 }
 
@@ -58,8 +62,8 @@ function ConfEcho
     #***** Parameters *****
     local p_file=$1;
     local p_lineno=$2;
-    local badVal=$3;
-    local varVal=$4
+    local p_badVal=$3;
+    local p_varVal=$4
     
     shift && shift && shift && shift   # Shift the same number of time as the former arguments number to avoid including these arguments values in the allowed values array.
     
@@ -69,17 +73,18 @@ function ConfEcho
     i=0
 
     #***** Code *****
-    CheckColorCodeVariablesInitialized
+    CheckColorCodesAndTextTabVariablesInitialized
     
-    echo >&2; echo "$(tput setaf "$COL_RED")In $(tput setaf "$COL_CYAN")$p_file$(tput setaf "$COL_RED"), line $(tput setaf "$COL_CYAN")$p_lineno$(tput setaf "$COL_RED") --> Error : the $(tput setaf "$COL_CYAN")$varVal$(tput setaf "$COL_RED") variable's value is incorrect$(tput sgr0)" >&2
+    echo >&2; echo -n "$__COL_RED$__TXT_TAB$__TXT_TAB In$__COL_CYAN $p_file$__COL_RED, line$__COL_CYAN $p_lineno$__COL_RED --> " >&2
+    echo "Error : the$__COL_CYAN $p_varVal$__COL_RED variable's value is incorrect$__COL_RESET" >&2
     
     if [ -z "$badVar" ]; then
-        echo >&2; echo "$(tput setaf "$COL_RED")Bad value : $(tput setaf "$COL_YELLOW")An empty string$(tput sgr0)" >&2
+        echo >&2; echo "$COL_RED$__TXT_TAB$__TXT_TAB Bad value :$__COL_YELLOW An empty string$__COL_RESET" >&2
     else
-        echo >&2; echo "$(tput setaf "$COL_RED")Bad value : $(tput setaf "$COL_CYAN")$badVal$(tput sgr0)" >&2
+        echo >&2; echo "$COL_RED$__TXT_TAB$__TXT_TAB Bad value :$__COL_CYAN $p_badVal$__COL_RESET" >&2
     fi
 
-    echo >&2; echo "$(tput setaf "$COL_RED")The allowed values are :$(tput sgr0)" >&2
+    echo >&2; echo "$__COL_RED$__TXT_TAB$__TXT_TAB The allowed values are :$__COL_RESET" >&2
     
     # Displaying the list of every allowed arguments.
     for val in "${arr[@]}"; do
@@ -87,9 +92,9 @@ function ConfEcho
 
         # If an empty argument is allowed.
         if [ -z "$val" ]; then
-            echo "$(tput setaf "$COL_RED")$i/${#arr[@]}  --> $(tput setaf "$COL_ORANGE")An empty argument$(tput sgr0)" >&2
+            echo -e "${__COL_RED}$i/${#arr[@]}  --> ${__COL_ORANGE}An empty argument$__COL_RESET" >&2
         else
-            echo "$(tput setaf "$COL_RED")$i/${#arr[@]}  --> $(tput setaf "$COL_CYAN")$val$(tput sgr0)" >&2
+            echo -e "${__COL_RED}$i/${#arr[@]}  --> $__COL_CYAN$val$__COL_RESET" >&2
         fi
     done
     
@@ -107,8 +112,8 @@ function CheckSTAT_DEBUG
     local array=("true" "false")
 
     #***** Code *****
-    if [ "$STAT_DEBUG" != "true" ] && [ "$STAT_DEBUG" != "false" ]; then
-        ConfEcho "$p_file" "$p_lineno" "$STAT_DEBUG" "STAT_DEBUG" "${array[@]}"
+    if [ "$__STAT_DEBUG" != "true" ] && [ "$__STAT_DEBUG" != "false" ]; then
+        ConfEcho "$p_file" "$p_lineno" "$__STAT_DEBUG" "__STAT_DEBUG" "${array[@]}"
     fi
 }
 
@@ -123,8 +128,8 @@ function CheckSTAT_ERROR
     local array=("" "fatal")
 
     #***** Code *****
-    if [ -n "$STAT_ERROR" ] && [ "$STAT_ERROR" != "fatal" ]; then
-        ConfEcho "$p_file" "$p_lineno" "$STAT_ERROR" "STAT_ERROR" "${array[@]}"
+    if [ -n "$__STAT_ERROR" ] && [ "$__STAT_ERROR" != "fatal" ]; then
+        ConfEcho "$p_file" "$p_lineno" "$__STAT_ERROR" "__STAT_ERROR" "${array[@]}"
     fi
 }
 
@@ -139,8 +144,8 @@ function CheckSTAT_LOG
     local array=("true" "false")
 
     #***** Code *****
-    if [ "$STAT_LOG" != "true" ] && [ "$STAT_LOG" != "false" ]; then
-        ConfEcho "$p_file" "$p_lineno" "$STAT_LOG" "STAT_LOG" "${array[@]}"
+    if [ "$__STAT_LOG" != "true" ] && [ "$__STAT_LOG" != "false" ]; then
+        ConfEcho "$p_file" "$p_lineno" "$__STAT_LOG" "__STAT_LOG" "${array[@]}"
     fi
 }
 
@@ -155,8 +160,8 @@ function CheckSTAT_LOG_REDIRECT
     local array=("" "true" "false")
 
     #***** Code *****
-    if [ -n "$STAT_LOG_REDIRECT" ] && [ "$STAT_LOG_REDIRECT" != 'log' ] && [ "$STAT_LOG_REDIRECT" != 'tee' ]; then
-        ConfEcho "$p_file" "$p_lineno" "$STAT_LOG_REDIRECT" "STAT_LOG_REDIRECT" "${array[@]}"
+    if [ -n "$__STAT_LOG_REDIRECT" ] && [ "$__STAT_LOG_REDIRECT" != 'log' ] && [ "$__STAT_LOG_REDIRECT" != 'tee' ]; then
+        ConfEcho "$p_file" "$p_lineno" "$__STAT_LOG_REDIRECT" "__STAT_LOG_REDIRECT" "${array[@]}"
     fi
 }
 
@@ -168,12 +173,12 @@ function CheckSTAT_TIME_TXT
     local p_lineno=$2
 
     #***** Variables *****
-    local array=("$(tput setaf "$COL_ORANGE")An integer or a floating number")
+    local array=("$COL_ORANGE An integer or a floating number")
 
     #***** Code *****
     # If the status variable's value is not a float or an integer.
-    if [[ ! "$STAT_TIME_TXT" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
-        ConfEcho "$p_file" "$p_lineno" "$STAT_TIME_TXT" "STAT_TIME_TXT" "${array[@]}" >&2
+    if [[ ! "$__STAT_TIME_TXT" =~ ^([0-9]+\.?|[0-9]*\.[0-9]+)$ ]]; then
+        ConfEcho "$p_file" "$p_lineno" "$__STAT_TIME_TXT" "__STAT_TIME_TXT" "${array[@]}" >&2
     fi
 }
 
