Saving project. The bug in the CheckProjectLogStatus() function is still there.

--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -44,16 +44,15 @@ __STAT_USER_OS=""
 # Checking if the variables color file is sourced.
 function CheckColorCodesAndTextTabVariablesInitialized
 {
-    # Redefining the color and text variables here if the color variables file is not yet sourced.
-    if [ -z "$__COL_IS_INITIALIZED" ]; then
-        __COL_CYAN="$(tput setaf 6)"
-        __COL_ORANGE="$(tput setaf 166)"
-        __COL_RED="$(tput setaf 196)"
-        __COL_RESET="$(tput sgr0)"
-        __COL_YELLOW="$(tput setaf 226)"
-    elif [ -z "$__TXT_IS_INITIALIZED" ]; then
-        __TXT_TAB=">>>>"
-    fi
+    # Redefining the color variables here if the color variables file is not yet sourced.
+    __COL_CYAN="$(tput setaf 6)"
+    __COL_ORANGE="$(tput setaf 166)"
+    __COL_RED="$(tput setaf 196)"
+    __COL_RESET="$(tput sgr0)"
+    __COL_YELLOW="$(tput setaf 226)"
+
+    # Redefining the text variables here if the text variables file is not yet sourced.
+    __TXT_TAB=">>>>"
 }
 
 # Easy writing text function.
@@ -65,27 +64,31 @@ function ConfEcho
     local p_badVal=$3;
     local p_varVal=$4
     
-    shift && shift && shift && shift   # Shift the same number of time as the former arguments number to avoid including these arguments values in the allowed values array.
-    
+    # Shifting the same number of time as the former arguments number
+    # to avoid including these arguments values in the allowed values array.
+    shift 4
+
     local arr=("$@")
 
     #***** Variables *****
     i=0
 
     #***** Code *****
-    CheckColorCodesAndTextTabVariablesInitialized
-    
+    if [ -z "$__TXT_TAB" ] || [ -z "$__TXT_IS_INITIALIZED" ]; then
+        CheckColorCodesAndTextTabVariablesInitialized
+    fi
+
     echo >&2; echo -n "$__COL_RED$__TXT_TAB$__TXT_TAB In$__COL_CYAN $p_file$__COL_RED, line$__COL_CYAN $p_lineno$__COL_RED --> " >&2
     echo "Error : the$__COL_CYAN $p_varVal$__COL_RED variable's value is incorrect$__COL_RESET" >&2
-    
-    if [ -z "$badVar" ]; then
-        echo >&2; echo "$COL_RED$__TXT_TAB$__TXT_TAB Bad value :$__COL_YELLOW An empty string$__COL_RESET" >&2
+
+    if [ -z "$p_badVal" ]; then
+        echo >&2; echo "$__COL_RED$__TXT_TAB$__TXT_TAB Bad value :$__COL_YELLOW An empty string$__COL_RESET" >&2
     else
-        echo >&2; echo "$COL_RED$__TXT_TAB$__TXT_TAB Bad value :$__COL_CYAN $p_badVal$__COL_RESET" >&2
+        echo >&2; echo "$__COL_RED$__TXT_TAB$__TXT_TAB Bad value :$__COL_CYAN $p_badVal$__COL_RESET" >&2
     fi
 
     echo >&2; echo "$__COL_RED$__TXT_TAB$__TXT_TAB The allowed values are :$__COL_RESET" >&2
-    
+
     # Displaying the list of every allowed arguments.
     for val in "${arr[@]}"; do
         i=$(( i+1 ))
@@ -97,7 +100,7 @@ function ConfEcho
             echo -e "${__COL_RED}$i/${#arr[@]}  --> $__COL_CYAN$val$__COL_RESET" >&2
         fi
     done
-    
+
     echo >&2; exit 1
 }
 
