Saving before reorganizing the "functions" folder's content

--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -68,10 +68,10 @@ function ConfEcho
     # to avoid including these arguments values in the allowed values array.
     shift 4
 
-    local arr=("$@")
 
     #***** Variables *****
-    i=0
+    local arr=("$@")
+    local i=0
 
     #***** Code *****
     if [ -z "$__TXT_TAB" ] || [ -z "$__TXT_IS_INITIALIZED" ]; then
