--- a/bin/Linux-reinstall.desktop
+++ b/bin/Linux-reinstall.desktop
@@ -1,8 +1,20 @@
 [Desktop Entry]
-Name=Linux-reinstall
+Categories=System;
+Comment[fr_FR]=A Linux oriented installation script.
 Comment=A Linux oriented installation script.
 Exec=
-Icon=/usr/local/lib/Bash-utils/res/Linux-reinstall/desktop.png
+GenericName[fr_FR]=
+GenericName=
+Icon=
+MimeType=
+Name[fr_FR]=Linux-reinstall
+Name=Linux-reinstall
+Path=
+StartupNotify=true
 Terminal=true
+TerminalOptions=
 Type=Application
-Categories=System;
+X-DBUS-ServiceName=
+X-DBUS-StartupType=
+X-KDE-SubstituteUID=false
+X-KDE-Username=
