--- a/config/Init.conf
+++ b/config/Init.conf
@@ -6,11 +6,8 @@
 
 ## BASH-UTILS PATHS VARIABLES
 
-# Bash-Utils root directory path.
-__BASH_UTILS_ROOT="/usr/local/lib/Bash-utils"
-
 # Bash-Utils sub-folders paths.
-__BASH_UTILS="$__BASH_UTILS_ROOT/lib/"
+__BASH_UTILS="$__BASH_UTILS_ROOT/lib"
 __BASH_UTILS_BIN="$__BASH_UTILS_ROOT/bin"
 __BASH_UTILS_CONF="$__BASH_UTILS_ROOT/config"
 __BASH_UTILS_TMP="$__BASH_UTILS_ROOT/tmp"
@@ -41,12 +38,12 @@ __BASH_UTILS_FUNCTS_MAIN="$__BASH_UTILS_FUNCTS/main"
 __BASH_UTILS_LANG="$__BASH_UTILS/lang"
 __BASH_UTILS_VARS="$__BASH_UTILS/variables"
 
-__FUNCTIONS_FILES_PATH=(
+__BASH_UTILS_FUNCTIONS_FILES_PATH=(
 	"$__BASH_UTILS_FUNCTS_BASIS/Arguments.lib"     \
+	"$__BASH_UTILS_FUNCTS_BASIS/Checkings.lib"       \
 	"$__BASH_UTILS_FUNCTS_BASIS/CheckSTAT.lib"     \
 	"$__BASH_UTILS_FUNCTS_BASIS/Colors.lib"        \
 	"$__BASH_UTILS_FUNCTS_BASIS/Echo.lib"          \
-	"$__BASH_UTILS_FUNCTS_BASIS/Handles.lib"       \
 	"$__BASH_UTILS_FUNCTS_BASIS/Headers.lib"       \
 	"$__BASH_UTILS_FUNCTS_BASIS/Inputs.lib"        \
 	"$__BASH_UTILS_FUNCTS_BASIS/Pipelining.lib"    \
@@ -55,7 +52,7 @@ __FUNCTIONS_FILES_PATH=(
 	"$__BASH_UTILS_FUNCTS_MAIN/Permissions.lib"    \
 	"$__BASH_UTILS_FUNCTS_MAIN/Time.lib" )
 
-__VARIABLES_FILES_PATH=(
+__BASH_UTILS_VARIABLES_FILES_PATH=(
 	"$__BASH_UTILS_VARS/colors.var"        \
 	"$__BASH_UTILS_VARS/directories.var"   \
 	"$__BASH_UTILS_VARS/files.var"         \
