Working CheckProjectLogStatus() function's argument array detection.

--- a/config/Init.conf
+++ b/config/Init.conf
@@ -40,7 +40,7 @@ __BASH_UTILS_VARS="$__BASH_UTILS/variables"
 
 __BASH_UTILS_FUNCTIONS_FILES_PATH=(
 	"$__BASH_UTILS_FUNCTS_BASIS/Arguments.lib"     \
-	"$__BASH_UTILS_FUNCTS_BASIS/Checkings.lib"       \
+	"$__BASH_UTILS_FUNCTS_BASIS/Checkings.lib"     \
 	"$__BASH_UTILS_FUNCTS_BASIS/CheckSTAT.lib"     \
 	"$__BASH_UTILS_FUNCTS_BASIS/Colors.lib"        \
 	"$__BASH_UTILS_FUNCTS_BASIS/Echo.lib"          \
@@ -105,3 +105,6 @@ __PROJECT_FIFO_DIR_PATH="$__PROJECT_TMP_DIR/$__PROJECT_FIFO_DIR_NAME"
 __PROJECT_FIFO_COLORS="$__PROJECT_FIFO_DIR_PATH/Colors"
 
 # -----------------------------------------------
+
+## INITIALIZATION STEP CHECKING
+__BASH_UTILS_IS_INITIALIZING="true"
