--- a/config/Init.conf
+++ b/config/Init.conf
@@ -10,6 +10,7 @@
 __BASH_UTILS="$__BASH_UTILS_ROOT/lib"
 __BASH_UTILS_BIN="$__BASH_UTILS_ROOT/bin"
 __BASH_UTILS_CONF="$__BASH_UTILS_ROOT/config"
+__BASH_UTILS_DOCS="$__BASH_UTILS_ROOT/docs"
 __BASH_UTILS_TMP="$__BASH_UTILS_ROOT/tmp"
 
 # "config" folder's content.
