--- a/config/Init.conf
+++ b/config/Init.conf
@@ -7,29 +7,30 @@
 ## BASH-UTILS PATHS
 
 # Bash-Utils sub-folders paths.
-__BASH_UTILS="$__BASH_UTILS_ROOT/lib"
-__BASH_UTILS_BIN="$__BASH_UTILS_ROOT/bin"
-__BASH_UTILS_CONF="$__BASH_UTILS_ROOT/config"
-__BASH_UTILS_DOCS="$__BASH_UTILS_ROOT/docs"
-__BASH_UTILS_TMP="$__BASH_UTILS_ROOT/tmp"
+__BASH_UTILS="$__BASH_UTILS_ROOT/lib"			# Default --> "$__BASH_UTILS_ROOT/lib"
+__BASH_UTILS_BIN="$__BASH_UTILS_ROOT/bin"		# Default --> "$__BASH_UTILS_ROOT/bin"
+__BASH_UTILS_CONF="$__BASH_UTILS_ROOT/config"	# Default --> "$__BASH_UTILS_ROOT/config"
+__BASH_UTILS_DOCS="$__BASH_UTILS_ROOT/docs"		# Default --> "$__BASH_UTILS_ROOT/docs"
+__BASH_UTILS_TMP="$__BASH_UTILS_ROOT/tmp"		# Default --> "$__BASH_UTILS_ROOT/tmp"
 
 # "config" folder's content.
-__BASH_UTILS_CONF_PROJECT_STATUS="$__BASH_UTILS_CONF/ProjectStatus.conf"
+__BASH_UTILS_CONF_PROJECT_STATUS="$__BASH_UTILS_CONF/ProjectStatus.conf"		# Default --> "$__BASH_UTILS_CONF/ProjectStatus.conf"
 
 # Bash-utils dev-tools paths.
-__BASH_UTILS_DEVTOOLS_ROOT="$__BASH_UTILS_ROOT/projects/dev-tools"
-__BASH_UTILS_DEVTOOLS_BIN="$__BASH_UTILS_DEVTOOLS_ROOT/dev-bin"
-__BASH_UTILS_DEVTOOLS_IMG="$__BASH_UTILS_DEVTOOLS_ROOT/dev-img"
-__BASH_UTILS_DEVTOOLS_SRC="$__BASH_UTILS_DEVTOOLS_ROOT/dev-src"
-__BASH_UTILS_DEVTOOLS_TRANSL="$__BASH_UTILS_DEVTOOLS_ROOT/dev-translations"
+__BASH_UTILS_DEVTOOLS_ROOT="$__BASH_UTILS_ROOT/projects/dev-tools"				# Default --> "$__BASH_UTILS_ROOT/projects/dev-tools"
+__BASH_UTILS_DEVTOOLS_BIN="$__BASH_UTILS_DEVTOOLS_ROOT/dev-bin"					# Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-bin"
+__BASH_UTILS_DEVTOOLS_IMG="$__BASH_UTILS_DEVTOOLS_ROOT/dev-img"					# Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-img"
+__BASH_UTILS_DEVTOOLS_SRC="$__BASH_UTILS_DEVTOOLS_ROOT/dev-src"					# Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-src"
+__BASH_UTILS_DEVTOOLS_TRANSL="$__BASH_UTILS_DEVTOOLS_ROOT/dev-translations"		# Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-translations"
 
 # "lib" folder's content.
-__BASH_UTILS_FUNCTS="$__BASH_UTILS/functions"
-__BASH_UTILS_FUNCTS_BASIS="$__BASH_UTILS_FUNCTS/basis"
-__BASH_UTILS_FUNCTS_MAIN="$__BASH_UTILS_FUNCTS/main"
-__BASH_UTILS_LANG="$__BASH_UTILS/lang"
-__BASH_UTILS_VARS="$__BASH_UTILS/variables"
+__BASH_UTILS_FUNCTS="$__BASH_UTILS/functions"				# Default --> "$__BASH_UTILS/functions"
+__BASH_UTILS_FUNCTS_BASIS="$__BASH_UTILS_FUNCTS/basis"		# Default --> "$__BASH_UTILS_FUNCTS/basis"
+__BASH_UTILS_FUNCTS_MAIN="$__BASH_UTILS_FUNCTS/main"		# Default --> "__BASH_UTILS_FUNCTS/main"
+__BASH_UTILS_LANG="$__BASH_UTILS/lang"						# Default --> "$__BASH_UTILS/lang"
+__BASH_UTILS_VARS="$__BASH_UTILS/variables"					# Default --> "$__BASH_UTILS/variables"
 
+# "functions" folder's sub-folders content.
 __BASH_UTILS_FUNCTIONS_FILES_PATH=(
 	"$__BASH_UTILS_FUNCTS_BASIS/Arguments.lib"     \
 	"$__BASH_UTILS_FUNCTS_BASIS/Checkings.lib"     \
@@ -44,6 +45,7 @@ __BASH_UTILS_FUNCTIONS_FILES_PATH=(
 	"$__BASH_UTILS_FUNCTS_MAIN/Permissions.lib"    \
 	"$__BASH_UTILS_FUNCTS_MAIN/Time.lib" )
 
+# "variables" folder's content.
 __BASH_UTILS_VARIABLES_FILES_PATH=(
 	"$__BASH_UTILS_VARS/colors.var"        \
 	"$__BASH_UTILS_VARS/directories.var"   \
@@ -55,8 +57,8 @@ __BASH_UTILS_VARIABLES_FILES_PATH=(
 
 ## INITIALIZATION STEP CHECKING
 
-# 
-__BASH_UTILS_IS_INITIALIZING="true"
+# Initialization checking variable.
+__BASH_UTILS_IS_INITIALIZING="true"				# Default --> "true"
 
 # -----------------------------------------------
 
@@ -78,32 +80,32 @@ __PROJECT_NAME=$(basename "$0" | cut -f 1 -d '.')         # Name of the project 
 
 # To remove these folders, please run the "rm -rf $folder" command with sudo if you're not logged as super-user.
 if [ "$EUID" -eq 0 ]; then
-    __PROJECT_TMP_DIR="$__BASH_UTILS_TMP/$__PROJECT_NAME - ROOT"
+    __PROJECT_TMP_DIR="$__BASH_UTILS_TMP/$__PROJECT_NAME - ROOT"	# Default --> "$__BASH_UTILS_TMP/$__PROJECT_NAME - ROOT"
 
 else
-    __PROJECT_TMP_DIR="$__BASH_UTILS_TMP/$__PROJECT_NAME"
+    __PROJECT_TMP_DIR="$__BASH_UTILS_TMP/$__PROJECT_NAME"			# Default --> "$__BASH_UTILS_TMP/$__PROJECT_NAME"
 fi
 
 # Defining project's log file's path.
-__PROJECT_LOG_DIR_NAME="logs"
-__PROJECT_LOG_DIR_PATH="$__PROJECT_TMP_DIR/$__PROJECT_LOG_DIR_NAME"
-__PROJECT_LOG_FILE_NAME="$__PROJECT_NAME.log"
-__PROJECT_LOG_FILE_PATH="$__PROJECT_LOG_DIR_PATH/$__PROJECT_LOG_FILE_NAME"
+__PROJECT_LOG_DIR_NAME="logs"												# Default --> "logs"
+__PROJECT_LOG_DIR_PATH="$__PROJECT_TMP_DIR/$__PROJECT_LOG_DIR_NAME"			# Default --> "$__PROJECT_TMP_DIR/$__PROJECT_LOG_DIR_NAME"
+__PROJECT_LOG_FILE_NAME="$__PROJECT_NAME.log"								# Default --> "$__PROJECT_NAME.log"
+__PROJECT_LOG_FILE_PATH="$__PROJECT_LOG_DIR_PATH/$__PROJECT_LOG_FILE_NAME"	# Default --> "$__PROJECT_LOG_DIR_PATH/$__PROJECT_LOG_FILE_NAME"
 
 # Defining project's text formatting building's output file.
-__PROJECT_TR_FILE_NAME="tr.tmp"
-__PROJECT_TR_FILE_PATH="$__PROJECT_TMP_DIR/$__PROJECT_TMP_TR_FILE"
+__PROJECT_TR_FILE_NAME="tr.tmp"												# Default --> "tr.tmp"
+__PROJECT_TR_FILE_PATH="$__PROJECT_TMP_DIR/$__PROJECT_TMP_TR_FILE"			# Default --> "$__PROJECT_TMP_DIR/$__PROJECT_TMP_TR_FILE"
 
 # -----------------------------------------------
 
 ## PROJECT'S NAMED PIPES
 
 # Defining project's FIFOs directory.
-__PROJECT_FIFO_DIR_NAME="FIFO"
-__PROJECT_FIFO_DIR_PATH="$__PROJECT_TMP_DIR/$__PROJECT_FIFO_DIR_NAME"
+__PROJECT_FIFO_DIR_NAME="FIFO"												# Default --> "FIFO"
+__PROJECT_FIFO_DIR_PATH="$__PROJECT_TMP_DIR/$__PROJECT_FIFO_DIR_NAME"		# Default --> "$__PROJECT_TMP_DIR/$__PROJECT_FIFO_DIR_NAME"
 
 # Defining project's FIFOs
-__PROJECT_FIFO_COLORS="$__PROJECT_FIFO_DIR_PATH/Colors"
+__PROJECT_FIFO_COLORS="$__PROJECT_FIFO_DIR_PATH/Colors"						# Default --> "$__PROJECT_FIFO_DIR_PATH/Colors"
 
 # -----------------------------------------------
 
@@ -114,7 +116,7 @@ __PROJECT_FIFO_COLORS="$__PROJECT_FIFO_DIR_PATH/Colors"
 ## INITIALIZATION PATHS VARIABLES
 
 # Bash-utils paths list variables (to check if every directories and files were successfully sourced). 
-__INIT_FILE_LIST_NAME="Sourced.list"
-__INIT_LIST_FILE_PATH="$__PROJECT_LOG_DIR_PATH/$__INIT_FILE_LIST_NAME"
+__INIT_FILE_LIST_NAME="Sourced.list"										# Default --> "Sourced.list"
+__INIT_LIST_FILE_PATH="$__PROJECT_LOG_DIR_PATH/$__INIT_FILE_LIST_NAME"		# Default --> "$__PROJECT_LOG_DIR_PATH/$__INIT_FILE_LIST_NAME"
 
 # -----------------------------------------------
