Added new status variable __STAT_OPERATE_ROOT

--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -28,6 +28,11 @@ __STAT_LOG="true"
 # shellcheck disable=SC2034
 __STAT_LOG_REDIRECT=""
 
+# Project's authorization to operate at the root directory or one of its sub-folders --> This variable accepts "authorized" or "forbidden" as values.
+# Default value : "forbidden" (by security).
+# shellcheck disable=SC2034
+__STAT_OPERATE_ROOT="forbidden"
+
 # Project's messages display time --> This variable accepts any integer of floating number.
 # Default value : ".5"
 # shellcheck disable=SC2034
