Added __STAT_OPERATE_ROOT in CheckSTAT.lib, a begin of initializer printing in CheckProjectLogStatus, and some functions

--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -28,7 +28,7 @@ __STAT_LOG="true"
 # shellcheck disable=SC2034
 __STAT_LOG_REDIRECT=""
 
-# Project's authorization to operate at the root directory or one of its sub-folders --> This variable accepts "authorized" or "forbidden" as values.
+# Project's authorization to operate at the root directory or one of its sub-folders --> This variable accepts "authorized", "forbidden" or "restricted" as values.
 # Default value : "forbidden" (by security).
 # shellcheck disable=SC2034
 __STAT_OPERATE_ROOT="forbidden"
