Moved variables files to config/, created the __STAT_FIFO_REDIRECTION status variable, moved documentation files and modified other files when I was in the train

--- a/config/ProjectStatus.conf
+++ b/config/ProjectStatus.conf
@@ -18,6 +18,11 @@ __STAT_ERROR=""
 # shellcheck disable=SC2034
 __STAT_EXIT_CODE="1"
 
+# Project's text color redirection to a FIFO (to store the tput setaf <code> integer) --> This variable accepts "true" or "false" as value.
+# Default value : "false"
+# shellcheck disable=SC2034
+__STAT_FIFO_REDIRECT="false"
+
 # Project's main log file informations --> This variable only accepts "true" or "false" as values.
 # Default value : "true"
 # shellcheck disable=SC2034
