--- a/config/Init.conf
+++ b/config/Init.conf
@@ -6,52 +6,7 @@
 
 ## BASH-UTILS PATHS
 
-# Bash-Utils sub-folders paths.
-__BASH_UTILS="$__BASH_UTILS_ROOT/lib"			# Default --> "$__BASH_UTILS_ROOT/lib"
-__BASH_UTILS_BIN="$__BASH_UTILS_ROOT/bin"		# Default --> "$__BASH_UTILS_ROOT/bin"
-__BASH_UTILS_CONF="$__BASH_UTILS_ROOT/config"	# Default --> "$__BASH_UTILS_ROOT/config"
-__BASH_UTILS_DOCS="$__BASH_UTILS_ROOT/docs"		# Default --> "$__BASH_UTILS_ROOT/docs"
-__BASH_UTILS_TMP="$__BASH_UTILS_ROOT/tmp"		# Default --> "$__BASH_UTILS_ROOT/tmp"
-
-# "config" folder's content.
-__BASH_UTILS_CONF_PROJECT_STATUS="$__BASH_UTILS_CONF/ProjectStatus.conf"		# Default --> "$__BASH_UTILS_CONF/ProjectStatus.conf"
-
-# Bash-utils dev-tools paths.
-__BASH_UTILS_DEVTOOLS_ROOT="$__BASH_UTILS_ROOT/projects/dev-tools"				# Default --> "$__BASH_UTILS_ROOT/projects/dev-tools"
-__BASH_UTILS_DEVTOOLS_BIN="$__BASH_UTILS_DEVTOOLS_ROOT/dev-bin"					# Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-bin"
-__BASH_UTILS_DEVTOOLS_IMG="$__BASH_UTILS_DEVTOOLS_ROOT/dev-img"					# Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-img"
-__BASH_UTILS_DEVTOOLS_SRC="$__BASH_UTILS_DEVTOOLS_ROOT/dev-src"					# Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-src"
-__BASH_UTILS_DEVTOOLS_TRANSL="$__BASH_UTILS_DEVTOOLS_ROOT/dev-translations"		# Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-translations"
-
-# "lib" folder's content.
-__BASH_UTILS_FUNCTS="$__BASH_UTILS/functions"				# Default --> "$__BASH_UTILS/functions"
-__BASH_UTILS_FUNCTS_BASIS="$__BASH_UTILS_FUNCTS/basis"		# Default --> "$__BASH_UTILS_FUNCTS/basis"
-__BASH_UTILS_FUNCTS_MAIN="$__BASH_UTILS_FUNCTS/main"		# Default --> "__BASH_UTILS_FUNCTS/main"
-__BASH_UTILS_LANG="$__BASH_UTILS/lang"						# Default --> "$__BASH_UTILS/lang"
-__BASH_UTILS_VARS="$__BASH_UTILS/variables"					# Default --> "$__BASH_UTILS/variables"
-
-# "functions" folder's sub-folders content.
-__BASH_UTILS_FUNCTIONS_FILES_PATH=(
-	"$__BASH_UTILS_FUNCTS_BASIS/Arguments.lib"     \
-	"$__BASH_UTILS_FUNCTS_BASIS/Checkings.lib"     \
-	"$__BASH_UTILS_FUNCTS_BASIS/CheckSTAT.lib"     \
-	"$__BASH_UTILS_FUNCTS_BASIS/Colors.lib"        \
-	"$__BASH_UTILS_FUNCTS_BASIS/Echo.lib"          \
-	"$__BASH_UTILS_FUNCTS_BASIS/Headers.lib"       \
-	"$__BASH_UTILS_FUNCTS_BASIS/Inputs.lib"        \
-	"$__BASH_UTILS_FUNCTS_BASIS/Pipelining.lib"    \
-	"$__BASH_UTILS_FUNCTS_MAIN/Directories.lib"    \
-	"$__BASH_UTILS_FUNCTS_MAIN/Files.lib"          \
-	"$__BASH_UTILS_FUNCTS_MAIN/Permissions.lib"    \
-	"$__BASH_UTILS_FUNCTS_MAIN/Time.lib" )
-
-# "variables" folder's content.
-__BASH_UTILS_VARIABLES_FILES_PATH=(
-	"$__BASH_UTILS_VARS/colors.var"        \
-	"$__BASH_UTILS_VARS/directories.var"   \
-	"$__BASH_UTILS_VARS/files.var"         \
-	"$__BASH_UTILS_VARS/text.var"          \
-	"$__BASH_UTILS_VARS/time.var")
+# The Bash-Utils sub-folders paths definition was already made in the "~/.bash_profile" file.
 
 # -----------------------------------------------
 
